# boardroom-repo

./: .coverage  .env.development.local  .env.example  .env.local  AI_ML_FEATURES.md  ENGINEERING_REVIEW.md  Makefile  Project_Roadmap.md  Technical_Analysis.md  boardroom  boardroom.cmd  docker-compose.yml  project_context.md  pyproject.toml  quality-report.txt  schema_new.sql
.claude/: settings.local.json
.github/workflows/: ai-testing.yml  code-quality.yml
VIBE_Docs/: Technical_Analysis.md  directory.md  hello_boardroom_plan.md
VIBE_Docs/Checkpoints/: Checkpoint_1.md
VIBE_Docs/Tasks/: multi_task_context.md
alembic/: env.py
alembic/versions/: 785aae47787c_initial_schema_alignment_with_models.py
app/: main.py  worker.py
app/api/v1/: ai_ml_operations.py  ai_operations.py  api.py  auth.py  boardroom.py  cache.py  health.py  integrations.py  monitoring.py  standards.py
app/core/: advanced_caching.py  api_standards.py  cache_middleware.py  config.py  error_monitoring.py  exceptions.py  health_checks.py  memory_management.py  metrics.py  middleware.py  openapi_customization.py  response_optimization.py  shutdown_manager.py
app/core/langgraph/: boardroom.py  graph.py
app/models/: boardroom.py  session.py  thread.py  user.py
app/schemas/: __init__.py  ai_operations.py  api.py  boardroom.py  decision.py  ml_operations.py
app/services/: ai_state_manager.py  automation_service.py  database.py  ml_pipeline.py  ml_service.py  monitoring_service.py  redis_service.py
app/services/integrations/: __init__.py  analytics.py  base.py  calendar.py  communication.py  config.py  documents.py  oauth.py  productivity.py  video.py  webhook.py
app/utils/: sanitization.py  workflow.py
docs/: AI_TESTING_DOCUMENTATION.md  CLAUDE.md  DEVELOPER_REFERENCE.md  Doc_Planning.md  FRONTEND_DEVELOPMENT_GUIDE.md  PROJECT_REMEDIATION_PLAN.md  api_standardization_summary.md  database-implementation-report.md  database-setup.md  first_prompt.md  monitoring-alerting-system.md  task_list.md  task_missing.md
docs/api/: changes.md  quick_start.md
docs/architecture/: api_design.md  database_design.md  langgraph_integration.md  system_overview.md
docs/archive/: ARCHIVE_LOG.md  ENGINEERING_REVIEW.md  Project_Roadmap.md  project_context.md
docs/archive/Tasks/: task_01_context.md  task_02_context.md  task_03_context.md  task_04_context.md
docs/deployment/: deployment_guide.md  infrastructure.md
docs/development/: coding_standards.md  setup.md  testing.md
docs/integration/: basics.md
docs/operations/: maintenance.md  troubleshooting.md
docs/phase3/: README.md
docs/process/: quality_standards.md  solo_workflow.md
docs/tasks/: task_01_security_audit.md  task_02_database_schema.md  task_03_authentication_system.md  task_04_input_validation.md  task_05_error_handling.md  task_06_testing_suite.md  task_07_monitoring_observability.md  task_08_api_standardization.md  task_09_langgraph_integration.md  task_10_redis_integration.md  task_11_performance_optimization.md  task_11_performance_optimization_completion_summary.md  task_11_performance_optimization_implementation_plan.md  task_12_code_quality.md  task_12_code_quality_completion_summary.md  task_13_service_integration.md  task_14_configuration_management.md  task_15_deployment_automation.md  task_16_documentation_completion.md
docs/user/: quick_start.md
prometheus/: alert_rules.yml  prometheus.yml
scripts/: code_quality.py  db_migrate.sh  migrate.sh  migrate_schema.py  run_ai_tests.py
tests/: README.md  __init__.py  conftest_basic.py  conftest_full.py  run_tests.py  test_basic_infrastructure.py  test_infrastructure.py
tests/fixtures/: data_fixtures.py
tests/integration/: test_ai_operations_endpoints.py  test_api_standards.py  test_auth_endpoints.py  test_boardroom_endpoints.py  test_health_checks.py  test_monitoring_endpoints.py
tests/performance/: __init__.py  test_ai_operations_performance.py  test_performance.py  test_performance_optimization.py
tests/unit/: test_ai_state_manager.py  test_auth_utils.py  test_database_service.py  test_error_monitoring.py  test_exceptions.py  test_langgraph_graph.py  test_meeting_management_tools.py  test_sanitization.py
(+31 files in other folders)
